--- a/index.html
+++ b/index.html
@@ -6,41 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>LINE Login Demo</title>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js'></script>
+    <style>
+        button {
+            background-color: black;
+            color: white;
+            border-radius: 10px;
+            padding: 10px;
+            cursor: pointer;
+        }
+    </style>
 </head>
 
 <body>
-
-    <button id="lineLoginBtn">LINE 登入</button>
+    <script src="./index.js"></script>
+    <button onclick="loginToLine()">1. LINE 登入</button>
+    <button onclick="init()">2. getLineCode</button>
+    <button onclick="getLineToken()">3. getLineToken</button>
     <pre>
         參考文章 
         <a href="https://ithelp.ithome.com.tw/articles/10244690">https://ithelp.ithome.com.tw/articles/10244690</a>
         <a href="https://ithelp.ithome.com.tw/articles/10229829">https://ithelp.ithome.com.tw/articles/10229829</a>
-        1. 打 GET api 做跳轉 https://access.line.me/oauth2/v2.1/authorize
+        <a href="https://w3c.hexschool.com/blog/d3accfa7">https://w3c.hexschool.com/blog/d3accfa7</a>
+        1. 打 line_GET_api 做跳轉 https://access.line.me/oauth2/v2.1/authorize
         2. 去 line developer 設定 Callback URL
         <img src="./line-login.PNG" alt="line">
-        3. 
+        3. 登入後會跳轉回來拿到code和state 例如 http://127.0.0.1:5500/index.html?code=hVL4p85qcU0bbvNpP8Sz&state=login
+        4. 打 line_POST_api https://api.line.me/oauth2/v2.1/token 取token
+        5. 丟給後端
+        6. 後端可以用token去拿用戶資料 // GET https://api.line.me/v2/profile
     </pre>
 
-    <script>
-        // https://w3c.hexschool.com/blog/d3accfa7
-        const client_id = "1657784682"
-        const redirect_uri = "https://dpes8693.github.io/line-login-example/"
-        $('#lineLoginBtn').on('click', function (e) {
-            // 故意分開寫
-            /* GET https://access.line.me/oauth2/v2.1/authorize */
-            const link = 'https://access.line.me/oauth2/v2.1/authorize?';
-            link += 'response_type=code';
-            link += '&client_id=' + client_id;
-            link += '&redirect_uri=' + redirect_uri;
-            link += '&state=login';
-            link += '&scope=openid%20profile';
-            window.location.href = link;
-        });
 
-        // POST https://api.line.me/oauth2/v2.1/token
-        // GET https://api.line.me/v2/profile
-    </script>
 </body>
 
 </html>
